@mixin, @use 공부함

--- a/scss/test.scss
+++ b/scss/test.scss
@@ -1,3 +1,7 @@
+// reset.scss의 속성 import
+@use "reset";
+
+// scss: 속성을 변수에 저장 가능
 $메인칼라: #2a4cb2;
 $기본사이즈: 16px;
 
@@ -36,6 +40,30 @@ $기본사이즈: 16px;
   @extend .btn2;
   color: green;
 }
+
+///////////////////////////////////////////////////////////////////////////////
+
+//@mixin 문법
+//@extend랑 비교해서 파라미터를 넣을 수 있어 @mixin이 더 많이 쓰임
+@mixin font($size, $test) {
+  font-size: $size;
+  letter-spacing: -1px;
+  #{$test}: 1px;
+}
+h2 {
+  @include font(40px, width);
+  //reset.scss의 변수를 사용함
+  //@mixin 등도 가능
+  color: reset.$메인칼라2;
+}
+h3 {
+  @include font(30px, width);
+}
+h4 {
+  @include font(20px, width);
+}
+
+///////////////////////////////////////////////////////////////////////////////
 
 .box {
   width: 100%;
