--- a/scss/test.css
+++ b/scss/test.css
@@ -1,3 +1,11 @@
+body {
+  margin: 0;
+}
+
+div {
+  box-sizing: border-box;
+}
+
 .btn-red {
   width: 100px;
   height: 100px;
@@ -16,6 +24,25 @@
 
 .btn-green {
   color: green;
+}
+
+h2 {
+  font-size: 40px;
+  letter-spacing: -1px;
+  width: 1px;
+  color: brown;
+}
+
+h3 {
+  font-size: 30px;
+  letter-spacing: -1px;
+  width: 1px;
+}
+
+h4 {
+  font-size: 20px;
+  letter-spacing: -1px;
+  width: 1px;
 }
 
 .box {
